cleanup [editor]: refactor LineLayout
GitOrigin-RevId: d5632912847ef66024ca489aad30ae1f6b07b0e8